# basketball-shot-tracker-computer-vision

./: .gitignore  LICENSES.md  Makefile  README.md  app.ps1  pyproject.toml  setup.ps1
configs/: base.yaml  eda.yaml  synth_bundle.yaml
configs/ablations/: a1.yaml  a3.yaml  a4.yaml  a5.yaml  a6.yaml  a7.yaml  a8.yaml  a9.yaml
docs/: APP.md  DATA_PROTOCOL.md  PLAN_REVIEW.md  PROJECT_PLAN.md  REPRODUCING.md  ZONES.md
mlruns-export/: a1_association.csv  a1_association.json  a3_resolution.csv  a3_resolution.json  a4_tracker.csv  a4_tracker.json  a5_bridging.csv  a5_bridging.json  a6_azimuth_sweep.csv  a6_azimuth_sweep.json  a7_homography.csv  a7_homography.json  a8_fsm_grid.csv  a8_fsm_grid.json  a9_calibration.csv  a9_calibration.json
notebooks/: demo.ipynb
notebooks/assets/: demo_meta.json
reports/: phase0_research.md  phase1_eda.md  phase1_experiments.md  phase1_final_report.md  phase1_pipeline.md  phase1_summary.md
reports/figures/eda/: eda_findings.json
scripts/: build_demo_clip.py  build_demo_notebook.py  condense_session.py  plot_camera_guide.py  plot_landmarks.py  plot_zones.py  review_events.py  run_ablations.py  tonemap_hdr.py
scripts/data/: hf_download.py  roboflow_download.py  trackid3x3_download.py
src/bball/: __init__.py  demo.py  pipeline.py  run.py
src/bball/ablations/: a1_association.py  a3_resolution.py  (+7 more)
tests/: test_ablation_metrics.py  test_app.py  test_condense_session.py  test_detect.py  test_eval.py  test_events.py  test_geometry.py  test_heads.py  test_review_events.py  test_smoke.py  test_synth.py  test_tracking.py  test_zones.py
(+52 files in other folders)
