[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bball"
version = "0.1.0"
description = "Basketball shot tracking from a fixed phone camera — detect / track / lift / classify research pipeline (Stage A)."
readme = "README.md"
requires-python = ">=3.11,<3.12"
license = { text = "MIT" }
authors = [{ name = "Sean Salvador" }]

# NOTE ON TORCH: torch/torchvision are installed from the CPU wheel index
# (https://download.pytorch.org/whl/cpu) by `make setup` BEFORE `pip install -e .`.
# They are pinned here so `pip install -e .` sees them already satisfied and never
# reaches for a multi-GB CUDA build from PyPI.
dependencies = [
    "numpy==2.2.6",
    "scipy==1.17.1",
    "opencv-python-headless==5.0.0.93",
    "matplotlib==3.11.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "mlflow==3.14.0",
    "pyyaml==6.0.3",
    "imageio==2.37.3",
    "imageio-ffmpeg==0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "nbconvert==7.17.1",
    "jupyter==1.1.1",
    "ipykernel==7.3.0",
]

[project.scripts]
bball = "bball.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bball = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.bball]
# Global reproducibility defaults; individual experiment configs override.
default_seed = 1729
